--- a/index.html
+++ b/index.html
@@ -1,10 +1,192 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HELLO</title>
-<link rel="stylesheet" href="css/style.css">
+<style>
+/* ===== 基本設定 ===== */
+html, body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    background: #a855f7;
+}
+
+/* ===== 背景眼睛 ===== */
+.bg-eyes {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    pointer-events: none;
+    opacity: 0.25;
+}
+
+.eyes {
+    display: flex;
+    gap: 10vw;
+}
+
+.eye {
+    width: 160px;
+    height: 160px;
+    background: white;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+}
+
+.pupil {
+    width: 60px;
+    height: 60px;
+    background: black;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.2s ease;
+}
+
+.pupil::after {
+    content: '';
+    width: 14px;
+    height: 14px;
+    background: white;
+    border-radius: 50%;
+    position: absolute;
+    top: 12px;
+    left: 12px;
+}
+
+/* 眨眼 */
+.eyelid {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: #a855f7;
+    border-radius: 50%;
+    transform: scaleY(0);
+    transform-origin: top;
+    animation: blink 5s infinite;
+}
+
+@keyframes blink {
+    0%, 90%, 100% { transform: scaleY(0); }
+    92%, 95% { transform: scaleY(1); }
+}
+
+/* ===== 中央內容 ===== */
+.center {
+    position: relative;
+    z-index: 2;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 1s ease;
+}
+
+h1 {
+    margin: 0 0 40px;
+}
+
+h1 span {
+    font-size: 110px;
+    font-weight: 900;
+    color: white;
+    display: inline-block;
+    position: relative;
+    animation: bounce 0.6s ease infinite alternate;
+}
+
+h1 span:nth-child(2) { animation-delay: 0.1s; }
+h1 span:nth-child(3) { animation-delay: 0.2s; }
+h1 span:nth-child(4) { animation-delay: 0.3s; }
+h1 span:nth-child(5) { animation-delay: 0.4s; }
+
+@keyframes bounce {
+    100% {
+        transform: translateY(-20px) scale(1.2);
+        text-shadow: 0 5px 0 #ccc, 0 10px 15px rgba(0,0,0,.25);
+    }
+}
+
+/* ===== 臉部表情 ===== */
+.face {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.mouth {
+    width: 60px;
+    height: 10px;
+    background: white;
+    border-radius: 5px;
+    margin-top: 20px;
+    transition: all 0.3s ease;
+}
+
+/* 開心表情 */
+.face.happy .mouth {
+    height: 20px;
+    border-radius: 0 0 30px 30px;
+}
+
+/* ===== ENTER 按鈕 ===== */
+.btn,
+.btn:focus {
+    min-width: 200px;
+    background-color: black;
+    border-radius: 4em;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition-duration: 0.4s;
+    padding: 14px 28px;
+    position: relative;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #3A3A3A;
+}
+
+.btn:after {
+    content: "";
+    display: block;
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: all 0.5s;
+    box-shadow: 0 0 10px 40px white;
+    border-radius: 4em;
+}
+
+.btn:active:after {
+    opacity: 1;
+    transition: 0s;
+    box-shadow: 0 0 0 0 white;
+}
+
+/* ===== 模擬器容器（初始隱藏） ===== */
+#simulator {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: #0b0214;
+}
+</style>
 </head>
 <body>
 
@@ -31,11 +213,62 @@
         <span>L</span>
         <span>O</span>
     </h1>
+
+    <!-- 臉部表情 -->
+    <div class="face">
+        <div class="eyes">
+            <div class="eye">
+                <div class="pupil"></div>
+                <div class="eyelid"></div>
+            </div>
+            <div class="eye">
+                <div class="pupil"></div>
+                <div class="eyelid"></div>
+            </div>
+        </div>
+        <div class="mouth"></div>
+    </div>
+
     <a href="#" class="btn" id="enterBtn">ENTER</a>
 </div>
 
-<script src="js/eyes.js"></script>
-<script src="js/main.js"></script>
+<!-- 模擬器容器 -->
+<div id="simulator">
+    <!-- 你的 SHM 模擬器 HTML 內容放這裡 -->
+</div>
+
+<script>
+// 表情控制
+const face = document.querySelector('.face');
+const enterBtn = document.getElementById('enterBtn');
+const center = document.getElementById('home');
+const simulator = document.getElementById('simulator');
+
+// 鼠標 hover ENTER → 開心
+enterBtn.addEventListener('mouseenter', () => face.classList.add('happy'));
+enterBtn.addEventListener('mouseleave', () => face.classList.remove('happy'));
+
+// 點擊 ENTER → 開心 + 進入模擬器
+enterBtn.addEventListener('click', (e) => {
+    e.preventDefault();
+    face.classList.add('happy');
+    center.style.opacity = 0;
+    setTimeout(() => {
+        center.style.display = 'none';
+        simulator.style.display = 'flex';
+    }, 1000);
+});
+
+// 眼睛跟隨滑鼠
+const pupils = document.querySelectorAll('.pupil');
+document.addEventListener('mousemove', e => {
+    const x = e.clientX / window.innerWidth;
+    const y = e.clientY / window.innerHeight;
+    pupils.forEach(pupil => {
+        pupil.style.transform = `translate(-50%, -50%) translate(${(x-0.5)*30}px, ${(y-0.5)*30}px)`;
+    });
+});
+</script>
 
 </body>
 </html>
